# subak-ses

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
notebooks/: playground.ipynb
src/subak_ses/: __init__.py  config.py  simulator.py
src/subak_ses/model/: __init__.py  agriculture.py  governance.py  harvest.py  helpers.py  hydrology.py  system.py  tourism.py
src/subak_ses/scenarios/: __init__.py  baseline.py  drought.py  governance_boost.py  rain_season.py  tourism_boom.py
src/subak_ses/utils/: __init__.py  analysis.py  scenario_runner.py  visualization.py
